bugfix index.php / studiplaner Login

--- a/pages/studiplaner.html
+++ b/pages/studiplaner.html
@@ -1,1 +1,4 @@
+<a href="https://idp.fh-trier.de/idp/profile/SAML2/Redirect/SSO?execution=e1s1" target="_blank">Login</a><br>
 Hello Studi-Planer
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel consequuntur alias amet veritatis labore fuga sequi
+    temporibus expedita voluptate ad exercitationem, earum at voluptatem ea recusandae ex fugiat dolorem odio!</p>
