Layout und grundlegende Inhalte für Site "Anleitungen"

--- a/pages/anleitungen.html
+++ b/pages/anleitungen.html
@@ -1,20 +1,73 @@
-Hello Anleitungen
+<div class="anleitungen">
 
-<!------ ANLEITUNGEN: 
+    <!-- Side navigation -->
+    <div class="sidenav">
+        <h>Allgemeines</h>
+        <a href="#mensa">Mensa</a>
+        <a href="#bibliothek">Bibliothek</a>
+        <a href="#busverbingung">Busverbindung</a>
+        <a href="#vpn">VPN</a>
 
-    Allgemeines: 
-        Rückmeldung
-        Mensakarte
-        Studentenausweis?
-        Bibliothek 
-        Busverbindung
-        VPN
+        <h>Online-Portale</h>
+        <a href="#studip">Studip</a>
+        <a href="#qis">QIS</a>
+        <a href="#olat">OLAT</a>
+        <a href="#onlineBibliothek">Online Bibliothek</a>
 
-    Online-Portale:
-        Studip
-        QIS
-        OLAT
-
+        <h>Nützliche Links</h>
+        <a href="#links">Fachschaft</a>
+        <a href="#links">Studis</a>
+        <a href="#links">Online-Portale</a>
+    </div>
 
 
--->
+    <!-- Content -->
+    <div class="content_anleitungen">
+
+        <!--Allgemeines-->
+        <a name="mensa">Mensa</a>
+        <p>
+            Generelle Infos zur Mensa <br> Wo finde ich den Speiseplan? <br> Wie lade ich die Menskarte auf?<br> Wie benutze ich die Mensa-App?
+        </p>
+        <a name="bibliothek">Bibliothek</a>
+        <p>
+            Generelle Infos zur Bibliothek <br> Wie kann ich Bücher ausleihen? <br> Öffnungszeiten <br> Verweis auf Online-Ausleihe
+        </p>
+        <a name="busverbingung">Busverbindung</a>
+        <p>
+            Welche Busverbindungen führen zur Hochschule?
+        </p>
+        <a name="vpn">VPN</a>
+        <p>
+
+            Wofür brauche ich VPN? <br> Wie richte ich eine VPN-Verbindung ein? <br> Wie kann ich auf die hochschul-internen Laufwerke zugreifen?
+        </p>
+
+        <!--Online Portale-->
+        <a name="studip">Studip</a>
+        <p>
+            Wie melde ich mich an? <br> Welche Funktionen bietet Studip? <br> Tipps im Umgang
+        </p>
+        <a name="qis">QIS</a>
+        <p>
+            Wie melde ich mich an? <br> Welche Funktionen bietet QIS? <br> Was muss ich unbedingt beachten? <br> Tipps im Umgang
+        </p>
+        <a name="olat">OLAT</a>
+        <p>
+            Wie melde ich mich an? <br> Wofür brauche ich OLAT? <br> Welche Funktionen bietet Studip? <br> Tipps im Umgang
+        </p>
+        <a name="onlineBibliothek">Online Bibliothek</a>
+        <p>
+            Wie melde ich mich an? <br> Welche Funktionen bietet die Online-Bib? <br> Tipps im Umgang
+        </p>
+
+        <!--Nützliche Links-->
+        <a name="links">Nützliche Links</a>
+        <p>
+            Links zu: <br> Studip, QIS, OLAT, Studis-Protal, Online-Bib
+        </p>
+
+
+    </div>
+
+</div>
