Grundlegende von "Studieninteressierte"

--- a/pages/studieninteressierte.html
+++ b/pages/studieninteressierte.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studieninteressierte</title>
-    <link rel="stylesheet" href="STUDI-GUIDE/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body style="background-color: lightgrey;">
+
+    <h1 style="color:green">Herzlichen Willkommen In der Hochschule Trier</Tr></h1>
+    <hr>
     <div class="Studieninteressierte">
 
         <div class="sidenav">
-            <h>Für die Verzweifelte</h>
+            <h>Für die Verzweifelte :</h>
             <a href="Über die Hochschule">Über die Hochschule</a>
             <a href="Warum Trier ?">Warum Trier</a>
-
-            <h>Für die Motivierte</h>
+            <br>
+            <h>Für die Motivierte :</h>
             <a href="Bewerbungsprozess">Bewerbungsprozess</a>
             <a href="Einschreibungsprozess">Einschreibungsprozess</a>
             <a href="Studienablauf">Studienablauf</a>
