solved merge conflict studieninteressierte

--- a/pages/studieninteressierte.html
+++ b/pages/studieninteressierte.html
@@ -1,59 +1,55 @@
-<<<<<<< HEAD
-<body style="background-color: lightgrey;">
+<h1 style="color:green">Herzlichen Willkommen In der Hochschule Trier</Tr>
+</h1>
+<hr>
+<div class="Studieninteressierte">
 
-=======
->>>>>>> 7b7cc4e90baa7d793cb6fe472e0b4816fc676999
-    <h1 style="color:green">Herzlichen Willkommen In der Hochschule Trier</Tr></h1>
-    <hr>
-    <div class="Studieninteressierte">
-
-        <div class="sidenav">
-            <h>Für die Verzweifelte :</h>
-            <a href="Über die Hochschule">Über die Hochschule</a>
-            <a href="Warum Trier ?">Warum Trier</a>
-            <br>
-            <h>Für die Motivierte :</h>
-            <a href="Bewerbungsprozess">Bewerbungsprozess</a>
-            <a href="Einschreibungsprozess">Einschreibungsprozess</a>
-            <a href="Studienablauf">Studienablauf</a>
-        </div>
-            
-        <div class="content_Studieninteressierte">
-
-            <a name="Über die Hochschule"></a>
-            <p>
-                Die Hochschule Trier ist mit rund 7000 Studierenden und 160 Professoren eine der größten Fachhochschulen in Rheinland-Pfalz. <br> Sie verteilt sich auf mehrere Standorte in Trier (Hauptcampus Schneidershof, Irminenfreihof und Paulusplatz), Birkenfeld (Umwelt-Campus Birkenfeld) und Idar-Oberstein (Edelstein und Schmuck). <br> Sie ist Mitglied in der European University Association (EUA).
-            </p>
-
-            <a name= "Warum Trier ?"></a>
-            <p>
-                Trier ist die älteste Stadt Deutschlands mit mehr als 2000 Jahren Geschichte, und wenn man Geschichte nennt, nennt man auch Friede, Kampf und auch Sehenswürdigkeiten, die man überall der Stadt beobachten kann. <br> Die römische Stadt ist nicht nur von ihre Geschichte, sondern auch für ihre Multi-Kulti und junge Atmosphär, mehr können sie in der Seite (Studentenleben)
-            </p>
-
-            <a name="Bewerbungsprozess"></a>
-            <p>
-                Bewerbungsportal <br> Gebrauchte Dokumente <br> Zulassungbeschränkt oder frei <br> Fristen <br> Ablauf der Bewerbung <br> Studienberatung 
-            </p>
-
-            <a name="Einschreibungsprozess"></a>
-            <p>
-                Semesterbeitrag und Gebühren <br> Semesterticket <br> Semestertermine <br> 
-            </p>
-
-            <a name="Studienablauf"></a>
-            <p>
-                <h3>Leben an der Hochschule</h3>
-                    Prüfungen <br> PrüfungsVorleistung <br> Übungen <br> Vorlesungen 
-                <h3>Außerhalb der Hochschule</h3>
-                    Richtung ==> (Studentenleben)
-            </p>
-
-        </div>
-
-<<<<<<< HEAD
+    <div class="sidenav">
+        <h>Für die Verzweifelte :</h>
+        <a href="Über die Hochschule">Über die Hochschule</a>
+        <a href="Warum Trier ?">Warum Trier</a>
+        <br>
+        <h>Für die Motivierte :</h>
+        <a href="Bewerbungsprozess">Bewerbungsprozess</a>
+        <a href="Einschreibungsprozess">Einschreibungsprozess</a>
+        <a href="Studienablauf">Studienablauf</a>
     </div>
-</body>
-</html>
-=======
+
+    <div class="content_Studieninteressierte">
+
+        <a name="Über die Hochschule"></a>
+        <p>
+            Die Hochschule Trier ist mit rund 7000 Studierenden und 160 Professoren eine der größten Fachhochschulen in
+            Rheinland-Pfalz. <br> Sie verteilt sich auf mehrere Standorte in Trier (Hauptcampus Schneidershof,
+            Irminenfreihof und Paulusplatz), Birkenfeld (Umwelt-Campus Birkenfeld) und Idar-Oberstein (Edelstein und
+            Schmuck). <br> Sie ist Mitglied in der European University Association (EUA).
+        </p>
+
+        <a name="Warum Trier ?"></a>
+        <p>
+            Trier ist die älteste Stadt Deutschlands mit mehr als 2000 Jahren Geschichte, und wenn man Geschichte nennt,
+            nennt man auch Friede, Kampf und auch Sehenswürdigkeiten, die man überall der Stadt beobachten kann. <br>
+            Die römische Stadt ist nicht nur von ihre Geschichte, sondern auch für ihre Multi-Kulti und junge Atmosphär,
+            mehr können sie in der Seite (Studentenleben)
+        </p>
+
+        <a name="Bewerbungsprozess"></a>
+        <p>
+            Bewerbungsportal <br> Gebrauchte Dokumente <br> Zulassungbeschränkt oder frei <br> Fristen <br> Ablauf der
+            Bewerbung <br> Studienberatung
+        </p>
+
+        <a name="Einschreibungsprozess"></a>
+        <p>
+            Semesterbeitrag und Gebühren <br> Semesterticket <br> Semestertermine <br>
+        </p>
+
+        <a name="Studienablauf"></a>
+        <p>
+        <h3>Leben an der Hochschule</h3>
+        Prüfungen <br> PrüfungsVorleistung <br> Übungen <br> Vorlesungen
+        <h3>Außerhalb der Hochschule</h3>
+        Richtung ==> (Studentenleben)
+        </p>
+
     </div>
->>>>>>> 7b7cc4e90baa7d793cb6fe472e0b4816fc676999
+</div>
