--- a/pages/studieninteressierte.html
+++ b/pages/studieninteressierte.html
@@ -1,3 +1,10 @@
+<style>
+    .content_Studieninteressierte {
+        margin-left: 200px;
+        padding: 0px 10px;
+    }
+</style>
+
 <h1 style="color:green">Herzlichen Willkommen In der Hochschule Trier</Tr>
 </h1>
 <hr>
